--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "spring-petclinic-kotlin"]
 	path = spring-petclinic-kotlin
 	url = https://github.com/spring-petclinic/spring-petclinic-kotlin.git
+[submodule "spring-petclinic-rest"]
+	path = spring-petclinic-rest
+	url = https://github.com/spring-petclinic/spring-petclinic-rest.git
