--- a/axum-petclinic-service/Cargo.toml
+++ b/axum-petclinic-service/Cargo.toml
@@ -15,6 +15,8 @@ tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 serde_json = "1.0.116"
 validator = { version = "0.18.1", features = ["derive"] }
+sqlx = { version = "0.7.4", features = ["sqlx-postgres"]}
+chrono = "0.4.38"
 
 [dev-dependencies]
 anyhow = { version = "1.0.82" }
